# ocr-server

./: README.md  pyproject.toml
board/: admin.py  models.py  serializers.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_initial.py  0003_alter_board_image_link.py
config/: settings.py  urls.py
ocr/: urls.py  views.py
static/script/: board-api.js  boards-api.js  user-api.js
static/style/: board_form.css  board_list_form.css  board_write.css  grid.css
templates/: board.html  board_form.html  board_list_form.html  board_update_form.html  footer.html  header.html  index.html  join_form.html  login_form.html  user_update_form.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
